--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,16 @@
 name: spinner_button
+version: 0.5.0
+homepage: https://github.com/SunnyApp/progress_button
 description: A simple button which can transform and show a progress indicator.  Forked from another project
-version: 0.4.4-nullsafety.1
-author:
+environment: 
+  sdk: '>=2.12.0 <3.0.0'
+dependencies: 
+  flutter: 
+    sdk: flutter
+dev_dependencies: 
+  dartxx: any
+  flutter_test: 
+    sdk: flutter
+authors: 
   - Pascal Brosinski<pascal@brosinski.eu>
   - Eric Martineau<edspuzzle@gmail.com>
-homepage: https://github.com/SunnyApp/progress_button
-
-environment:
-  sdk: '>=2.12.0 <3.0.0'
-
-dependencies:
-  flutter:
-    sdk: flutter
-
-dev_dependencies:
-  dartxx: any
-  flutter_test:
-    sdk: flutter
-
-# For information on the generic Dart part of this file, see the
-# following page: https://www.dartlang.org/tools/pub/pubspec
